recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:12: error: not found: type int
def carre(n:int){
            ^