recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  carre(4)
  droite(90)
  carre(4)
  gauche(180)
  carre(4)
  gauche(90)
  carre(4)
  
}

def carre(n:int){
  for (k<-1 to n){
  	avance(100)
  	droite(90)
  }
}